--- a/index.html
+++ b/index.html
@@ -29,11 +29,21 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <div class="container">
+        <!-- Timeblocks go here -->
+        <script>
+          var today = new Date();
+          var dd = String(today.getDate()).padStart(2, '0');
+          var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+          var yyyy = today.getFullYear();
+      
+          today = dd + '/' + mm + '/' + yyyy;
+          document.write(today);
+      </script>
+      </div>
+  
     </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
-    </div>
-
+ 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   </body>
